--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy==1.26.4
-pytorch_lightning==2.3.3
-PyYAML==6.0.1
+lightning==2.5.3
+numpy==2.3.2
+PyYAML==6.0.2
+rich==14.1.0
 torch==2.3.1
 torchvision==0.18.1
+omegaconf==2.3.0
