--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 lightning==2.5.3
-numpy==2.3.2
-PyYAML==6.0.2
-rich==14.1.0
-torch==2.3.1
-torchvision==0.18.1
 omegaconf==2.3.0
+rich==14.2.0
+torch==2.7.1
+torchmetrics==1.5.1
+torchvision==0.18.1
